# token-input-embedding-gradients

./: .gitignore  .pre-commit-config.yaml  CHANGELOG_normal_vectors.md  DEPLOYMENT.md  NORMAL_VECTORS.md  QUICKSTART.md  README.md  SETUP.md  bert_animate.py  bert_experiments.py  bert_input_embedding_gradients.ipynb  bert_models.py  bert_util.py  bert_viz.py  bootstrap.sh  bootstrap_pip.sh  compute_batch_bert_gradients.py  compute_batch_llama_epsilon_level_sets.py  compute_batch_llama_gradients.py  compute_batch_llama_gradients_optimized.py  deploy_from_local.sh  deploy_to_remote.sh  example_normal_vector_computation.py  example_sentences.tsv  find_llama_epsilon_level_sets.ipynb  llama_animate.py  llama_embedding_sampling_tests.ipynb  llama_experiments.py  llama_input_embed_diagnostics.ipynb  llama_input_embedding_gradients.ipynb  llama_models.py  llama_util.py  llama_viz.py  pyproject.toml  setup_remote_complete.sh  torch_utils.py
